plugins {
    id 'application'
    id 'org.beryx.jlink' version '2.3.1'
}

sourceCompatibility = '1.9'
targetCompatibility = '1.9'
    
repositories {
    mavenCentral()
    maven {
        url 'https://oss.sonatype.org/content/repositories/snapshots/'
    }
}

applicationName = 'FXyz-Samples'
mainClassName = "${moduleName}/${fxyz_sampler_mainClass}"
ext.mainClass = mainClassName
applicationDefaultJvmArgs = ["-XX:+UseConcMarkSweepGC"]

dependencies {
    implementation project(':FXyz-Client')
    implementation project(':FXyz-Core')
    implementation project(':FXyz-Importers')
    implementation 'org.controlsfx:controlsfx:9.0.0'
    implementation ('org.reactfx:reactfx:2.0-M5')
    implementation ('org.fxmisc.easybind:easybind:1.0.4-SNAPSHOT')
    implementation ('org.jfxtras:jfxtras-controls:9.0-r1')
}

compileJava {
    doFirst {
        options.compilerArgs = [
                '--add-exports', 'javafx.graphics/com.sun.javafx.scene=org.fxyz3d.FXyz.Samples'
        ]
    }
    options.encoding = "UTF-8"
}

run {
    doFirst {
        jvmArgs = ['--add-exports', 'javafx.base/com.sun.javafx.runtime=controlsfx', 
                   '--add-exports', 'javafx.graphics/com.sun.javafx.scene=org.fxyz3d.FXyz.Samples']
    }
}

jar {
    manifest {
        attributes  'Implementation-Title':    'FXyz-Samples',
                    'Implementation-Version':   project.version,
                    'Class-Path':               configurations.compile.collect { it.getName() }.join(' '),
                    'Main-Class':               fxyz_sampler_mainClass,
                    'Automatic-Module-Name' :   "org.fxyz3d.samples"
    }
    from sourceSets.main.allJava
}

jlink {
    imageName = 'FXyz'
    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
    addExtraDependencies("javafx")
    launcher {
        name = 'FXyzSamples'
        jvmArgs = ['--add-exports', 'javafx.base/com.sun.javafx.runtime=org.fxyz3d.merged.module', 
                   '--add-exports', 'javafx.graphics/com.sun.javafx.scene=org.fxyz3d.FXyz.Samples']
    }
}